[notebooks](chore) Rename and change paths in dataset configuration files

--- a/configs/data/sine-function.yaml
+++ b/configs/data/sine-function.yaml
@@ -1,5 +1,5 @@
-name: TOY
-path: data/csv/toy.csv
+name: SINE_FUNCTION
+path: data/csv/sine-function.csv
 test_size: 1000
 input_columns: [x]
 output_columns: [y]
