--- a/configs/data/sum-of-gaussians.yaml
+++ b/configs/data/sum-of-gaussians.yaml
@@ -1,5 +1,5 @@
-name: STATIC
-path: data/csv/static-nonlinear.csv
+name: SUM_OF_GAUSSIANS
+path: data/csv/sum-of-gaussians.csv
 test_size: 10000
 input_columns: [x1, x2, x3, x4, x5, x6, x7, x8]
 output_columns: [y]
