--- a/configs/data/wh.yaml
+++ b/configs/data/wh.yaml
@@ -1,5 +1,5 @@
 name: Wiener-Hammerstein
-path: data/wh.csv
+path: data/csv/wiener-hammerstein.csv
 test_size: 88000
 input_columns: [u]
 output_columns: [y]
